Linked our client and our server and got a random request from the server

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
       <div class="swimmer">↜</div>
     </div>
   </div>
+  <button id="random" type="button">Random Move</button>
   <h3>Background Image Upload</h3>
   <form>
     <input type="file" class="file" /><br>
@@ -22,6 +23,7 @@
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/js/swimTeam.js"></script>
 <script src="/js/keypressHandler.js"></script>
+<script src="/js/httpHandler.js"></script>
 
 </html>
 
